--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,3 +1,75 @@
-.header{
-    
+.body{
+    width: 100%;
+    height: 100vh;
+    background-color: var(--gray-600);
+}
+
+.newItens{
+    display: flex;
+    align-items: center;
+    height: calc(50px - 50px);
+}
+
+.box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 4rem;
+}
+
+.content{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--font-second);
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.content header{
+    width: 100%;
+    display: flex;
+    padding: 1rem;
+    justify-content: space-between;
+}
+
+.titleCreate{
+    color: var(--blue);
+
+}
+.titleCompleted{
+    color: var(--purple-dark);
+}
+
+.content header p > span{
+    color: var(--gray-100);
+    background-color: var(--gray-400);
+    padding:0.1rem 0.7rem;
+    margin-left: 0.4rem;
+    border-radius: 50px;
+}
+
+.content section{
+    width: 100%;
+    margin: 1rem;
+    padding-top: 5rem;
+    border-top: 1px solid var(--gray-300);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.2rem;
+}
+.titleEmpty{
+    color: var(--gray-300);
+    font-weight: bolder;
+}   
+.icone{
+    color: var(--gray-400);
+    margin-bottom: 1rem;
+}
+.titleHelp{
+    color: var(--gray-300);
+    font-weight: 500;
 }
