--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,6 @@
 *{
     margin: 0;
     padding: 0;
-
 }
 
 
@@ -27,4 +26,8 @@
 
     --font: "Audiowide", sans-serif;
     --font-second: "Open Sans", sans-serif;
+}
+
+body{
+    background-color: var(--gray-600);
 }
